<resources>
    <string name="app_name">MessedUp</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="helptext">Need Help? Drop us a message at <a href="mailto:help.messedup@gmail.com?Subject=Lost%20Password" target="_top">help.messedup@gmail.com</a></string>
    <string name="helptext2"><a href="mailto:help.messedup@gmail.com?Subject=Lost%20Password" target="_top">help.messedup@gmail.com</a></string>
    <string name="contactusat">CALL OR DROP US A MESSAGE ANYTIME AT        <br><a href="" target="_top">+917387636474</a></br></string>
    <string name="helptextdipak">Dipak: <a href="mailto:dipakwani18@gmail.com?Subject=Lost%20Password" target="_top">help.messedup@gmail.com</a></string>
    <string name="helptextsaurabh">Saurabh: <a href="mailto:saurabhkshirsagar35@gmail.com?Subject=Lost%20Password" target="_top">help.messedup@gmail.com</a></string>
    <string name="helptextyash">Yash: <a href="mailto:ypkarwa@gmail.com?Subject=Lost%20Password" target="_top">help.messedup@gmail.com</a></string>

    <string name="my_own_title">Rate Us!</string>
    <string name="my_own_message">If you love our App, please take a moment to rate it on Google Play!</string>
    <string name="my_own_rate">Rate</string>
    <string name="my_own_thanks">No, Thanks</string>
    <string name="my_own_cancel">Maybe Later</string>

    <string name="meetingsetup">Call us or Drop a Message anytime to set up meeting time! <br><a href="" target="_top">+917387636474</a></br></string>

    <string name="unlimitedthalipay">UNLIMITED THALI</string>
    <string name="instamojodetails">PCI-DSS compliant payment environment. 128-bit encryption. RBI regulations compliant.</string>


    <string name="anandmessdetails">Anand Food Xpress</string>
    <string name="anandmessdetails2">Anand Food Xpress includes Anand Food Xpress and Parathas only</string>
    <string name="anandmessdetailsadd">No . 12, Katraj Dairy Road, Katraj, Pune - 411043</string>
    <string name="anandmessdetailsadd2">Landmark: Near Bharati Vidyapeeth University\nPhone number-99708 38110</string>


    <string name="kwalitymessdetails">Kwality Mess </string>
    <string name="kwalitymessdetailsadd">In front of Gurudatta Palace, Katraj, Pune - 411043</string>
    <string name="kwalitymessdetailsadd2">Landmark: Near Shani Mandir\nPhone number- 98903 65955</string>

    <string name="gujratimessdetails">Gujrati Mess</string>
    <string name="gujratimessdetailsadd">Survey no.34/4, Prasad Bungalow, Katraj, Pune - 411043</string>
    <string name="gujratimessdetailsadd2">Landmark: Near Pune Cambridge School. \nPhone number-83907 55778</string>

    <string name="j4umessdetails">Navruchi Veg.</string>
    <string name="j4umessdetailsadd">near Bharti Vidyapeeth back gate, Katraj Dairy Road, Katraj, Pune - 411043</string>
    <string name="j4umessdetailsadd2">Landmark: Near Rolls Mania (Next to Anand Mess)\nPhone number-99708 38110</string>

    <string name="termsandconditions">By paying, I Agree to <br><a href="" target="_top">Terms and Conditions</a></br></string>


</resources>
