<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about_mess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    tools:context="com.messedup.saurabh.mess2.AboutMessActivity">

    <TextView
        android:text="Our Affiliations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:id="@+id/textView21"
        android:textSize="30sp"
        android:textStyle="normal|bold"
        android:textAlignment="center"
        android:textColor="@color/BackgroundWhiteColor1"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:background="@color/screen4" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/textView21"
        style="@android:style/Widget.Material.ScrollView"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/anandmessdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView21"
                android:id="@+id/textView22"
                tools:text="@string/anandmessdetails"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:layout_marginBottom="10dp"
                android:textColor="@color/screen4"
                android:textSize="25sp"
                android:lineSpacingExtra="5sp"
                android:layout_marginTop="20dp" />

            <TextView
                android:text="@string/anandmessdetails2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView22"
                android:id="@+id/textView23"
                tools:text="@string/anandmessdetails2"
                android:layout_alignParentStart="true"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="@string/anandmessdetailsadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView25"
                android:layout_below="@+id/textView23"
                tools:text="@string/anandmessdetailsadd"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="8dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="@string/anandmessdetailsadd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView25"
                android:layout_alignEnd="@+id/textView25"
                android:id="@+id/textView26"
                android:layout_marginBottom="15dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="tap to get directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView36"
                android:textColor="@color/screen4"
                android:textAlignment="viewStart"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/screen4"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/kwalitymessdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView27"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/screen4"
                android:textSize="25sp"
                android:lineSpacingExtra="5sp" />

            <TextView
                android:text="@string/kwalitymessdetailsadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView28"
                android:layout_marginBottom="10dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="@string/kwalitymessdetailsadd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView29"
                android:layout_marginBottom="15dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="tap to get directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView37"
                android:textColor="@color/screen4"
                android:textAlignment="viewStart"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/screen4"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/gujratimessdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView30"
                android:textStyle="normal|bold"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textColor="@color/screen4"
                android:textSize="25sp"
                android:lineSpacingExtra="5sp" />

            <TextView
                android:text="@string/gujratimessdetailsadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView31"
                tools:text="@string/gujratimessdetailsadd"
                android:layout_marginBottom="10dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="@string/gujratimessdetailsadd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView32"
                android:layout_marginBottom="15dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="tap to get directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView38"
                android:textAlignment="viewStart"
                android:textColor="@color/screen4"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textSize="15sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/screen4"
                android:layout_centerVertical="true"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="@string/j4umessdetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView33"
                android:textStyle="normal|bold"
                android:textAllCaps="false"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:textColor="@color/screen4"
                android:textSize="25sp"
                android:lineSpacingExtra="5sp" />

            <TextView
                android:text="@string/j4umessdetailsadd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView34"
                android:layout_marginBottom="10dp"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp" />

            <TextView
                android:text="@string/j4umessdetailsadd2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView35"
                android:textColor="@color/button_background_disabled_end"
                android:textSize="18sp"
                android:lineSpacingExtra="2sp"
                android:layout_marginBottom="15dp" />

            <TextView
                android:text="tap to get directions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView39"
                android:textAlignment="viewStart"
                android:textColor="@color/screen4"
                android:textStyle="normal|bold"
                android:textAllCaps="true"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
